# PrettyXYZ

./: .gitignore  LICENSE  PrettyXYZ.h  PrettyXYZ.hpp  README.md
tests/: CMakeLists.txt  math.cpp
